--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,17 @@
-# Docker Build
 steps:
-- name: 'docker'
-  args: ['build', '-t', 'gcr.io/${PROJECT_ID}/gcpdevops', '.']
-images:
-- 'gcr.io/${PROJECT_ID}/gcpdevops'
- 
+ # Build the container image
+ - name: 'gcr.io/cloud-builders/docker'
+   args: ['build', '-t', 'gcr.io/$PROJECT_ID/gcpdevops', '.']
+ # Push the container image to Container Registry
+ - name: 'gcr.io/cloud-builders/docker'
+   args: ['push', 'gcr.io/$PROJECT_ID/gcpdevops']
+ # Deploy container image to GKE
+ - name: 'gcr.io/cloud-builders/gke-deploy'
+   entrypoint: gcloud
+   args:
+   - run
+   - --filename=gke.yaml
+   - --image=gcr.io/$PROJECT_ID/gcpdevops
+   - --location=europe-southwest1-a
+   - --cluster=gcp-dev-cluster
+   - --namespace=gcp-dev-cluster
