--- a/gke.yaml
+++ b/gke.yaml
@@ -27,7 +27,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "gcp-devops-gke-service"
-  namespace: "default"
+  namespace: "gcp-dev-cluster"
   labels:
     app.kubernetes.io/managed-by: "gcp-cloud-build-deploy"
 spec:
