--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Python Flask CI/CD Pipeline
+name: Python CI with Docker
 
 on:
   push:
@@ -7,22 +7,19 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  build-python:
+
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-    - name: Build and push Docker image
+    - name: Update package list and dependencies
+      run: sudo apt-get update
+
+    - name: Build and Push Docker Image
       uses: docker/build-push-action@v2
       with:
         context: .
         push: true
         tags: eechukwu/demo-apps:${{ github.sha }}
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
