--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,24 @@ on:
 
 jobs:
   build-python:
-
     runs-on: ubuntu-latest
-    
+    permissions:
+      security-events: write
+
     steps:
     - uses: actions/checkout@v2
 
-    - name: Update package list and dependencies
-      run: sudo apt-get update
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v2
@@ -23,3 +33,4 @@ jobs:
         context: .
         push: true
         tags: eechukwu/demo-apps:${{ github.sha }}
+        builder: ${{ env.BUILDKIT_HOST }}
