--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,53 +1,36 @@
+name: Deploy to GKE
+
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-
-env:
-  PROJECT_ID: "gcp-dev-account"
-  ZONE: "us-central1-c"
-  CLUSTER_NAME: "dev-cluster"
-  IMAGE_NAME: "eechukwu/demo-apps"
+    branches:
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up gcloud CLI
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        with:
+          version: '297.0.1'
+          project_id: gcp-dev-account
+          service_account_email: 569814587713-compute@developer.gserviceaccount.com
+          service_account_key: "1a5df0842a3f247b2124425dc01fc10b085dc3fb"
+          
+      - name: Configure Docker credentials
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
+      - name: Configure kubectl
+        run: |
+          echo "${{ secrets.KUBECONFIG }}" | base64 --decode > ${HOME}/kubeconfig
+          export KUBECONFIG=${HOME}/kubeconfig
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Build and Push Docker Image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
-
-    - name: Set up Google Cloud SDK
-      uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
-      with:
-        version: '340.0.0'
-        project_id: ${{ env.PROJECT_ID }}
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-
-    - name: Configure Docker to use gcloud credentials
-      run: |
-        gcloud auth configure-docker
-
-    - name: Deploy to GKE
-      run: |
-        gcloud container clusters get-credentials ${{ env.CLUSTER_NAME }} --zone ${{ env.ZONE }} --project ${{ env.PROJECT_ID }}
-        kubectl apply -f k8s/gke.yaml
+      - name: Deploy to GKE
+        run: |
+          envsubst < k8s/gke.yaml | kubectl apply -f -
