--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,51 @@
-name: Deploy to GKE
+name: Python CI with Docker and GKE
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
-  deploy:
+  build-python:
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
 
     steps:
-      - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up gcloud CLI
-        uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
-        with:
-          version: '297.0.1'
-          project_id: gcp-dev-account
-          service_account_email: 569814587713-compute@developer.gserviceaccount.com
-          service_account_key: "1a5df0842a3f247b2124425dc01fc10b085dc3fb"
-          
-      - name: Configure Docker credentials
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Configure kubectl
-        run: |
-          echo "${{ secrets.KUBECONFIG }}" | base64 --decode > ${HOME}/kubeconfig
-          export KUBECONFIG=${HOME}/kubeconfig
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
 
-      - name: Deploy to GKE
-        run: |
-          envsubst < k8s/gke.yaml | kubectl apply -f -
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: eechukwu/demo-apps:${{ github.sha }}
+        builder: ${{ env.BUILDKIT_HOST }}
+
+    - name: Configure Google Cloud SDK
+      uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+      with:
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        project_id: my-project-id
+        zone: us-central1-a
+        cluster_name: my-cluster-name
+
+    - name: Deploy to GKE
+      run: |
+        gcloud config set project my-project-id
+        gcloud container clusters get-credentials my-cluster-name --zone us-central1-a
+        kubectl apply -f gke.yaml
