--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,45 @@
+name: Build and Deploy
+
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 env:
-  PROJECT_ID: <your-project-id>
-  IMAGE_NAME: python-ci-with-docker
+  PROJECT_ID: my-gcp-project
+  IMAGE_NAME: python-ci-docker
+  IMAGE_TAG: ${{ github.sha }}
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Configure Google Cloud SDK
-        uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
+      - name: Set up gcloud CLI
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
           project_id: ${{ env.PROJECT_ID }}
-          service_account_email: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
-          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Configure Docker
-        uses: docker/setup-buildx-action@v1
+      - name: Build the Docker image
+        run: |
+          docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} .
 
-      - name: Build Docker image
-        uses: docker/build-push-action@v2
+      - name: Push the Docker image
+        uses: GoogleCloudPlatform/docker-credential-gcr@master
         with:
-          context: .
-          push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+        run: |
+          docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
       - name: Deploy to GKE
-        run: |
-          gcloud container clusters get-credentials <your-cluster-name> --zone <your-cluster-zone>
-          kubectl set image deployment/<your-deployment-name> <your-container-name>=${{ env.IMAGE_NAME }}:${{ github.sha }}
+        uses: GoogleCloudPlatform/github-actions/deploy-gke@master
+        with:
+          credentials: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ env.PROJECT_ID }}
+          cluster_name: my-gke-cluster
+          location: us-central1-a
+          yaml_file: ./gke.yaml
