--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         tags: docker.io/<your-dockerhub-username>/python-ci-with-docker:${{ github.sha }}
 
     - name: Set up Google Cloud SDK
-      uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+      uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
       with:
         project_id: <your-project-id>
         service_account_email: <your-service-account-email>
