--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,50 +2,32 @@ name: Build and Deploy to GKE
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      security-events: write
-
     steps:
-    - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Configure Google Cloud SDK
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
+        with:
+          project_id: my-gcp-project
+          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
+      - name: Configure kubectl
+        run: |
+          gcloud container clusters get-credentials my-gke-cluster --zone us-central1-c --project my-gcp-project
+          kubectl config use-context gke_my-gcp-project_us-central1-c_my-gke-cluster
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Build and Push Docker Image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: docker.io/<your-dockerhub-username>/python-ci-with-docker:${{ github.sha }}
-
-    - name: Set up Google Cloud SDK
-      uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
-      with:
-        project_id: <your-project-id>
-        service_account_email: <your-service-account-email>
-        service_account_key: ${{ secrets.GCLOUD_AUTH }}
-
-    - name: Configure Docker to use GCR
-      run: |
-        gcloud auth configure-docker
-
-    - name: Deploy to GKE
-      run: |
-        gcloud container clusters get-credentials <your-gke-cluster-name> --zone <your-gke-cluster-zone>
-        kubectl apply -f gke.yaml
+      - name: Deploy to GKE
+        run: |
+          kubectl apply -f gke.yaml
