--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  GKE_CLUSTER: dev-cluster    # Add your cluster name here.
-  GKE_ZONE: us-central1-c   # Add your cluster zone here.
+  GKE_CLUSTER: dev-cluster # Add your cluster name here.
+  GKE_ZONE: us-central1-c # Add your cluster zone here.
 
 jobs:
   setup-build-publish-deploy:
@@ -17,8 +17,7 @@ jobs:
     environment: production
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -40,26 +39,29 @@ jobs:
           tags: eechukwu/demo-apps:${{ github.sha }}
           builder: ${{ env.BUILDKIT_HOST }}
 
-      - name: Setup gcloud CLI
-        uses: google-github-actions/setup-gcloud@1.6.1
-        with:
-          project_id: ${{ secrets.GKE_PROJECT }}
-          service_account_key: ${{ secrets.GKE_SA_KEY }}
-          export_default_credentials: true
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      - name: Configure Docker to use gcloud command-line tool as credential helper for authentication
-        run: |-
+      # Setup gcloud CLI
+      - uses: google-github-actions/setup-gcloud@v0.2.0
+        with:
+          service_account_key: ${{ secrets.GKE_SA_KEY }}
+          project_id: ${{ secrets.GKE_PROJECT }}
+
+      # Configure Docker to use the gcloud command-line tool as a credential
+      # helper for authentication
+      - run: |-
           gcloud --quiet auth configure-docker
 
-      - name: Get the GKE credentials so we can deploy to the cluster
-        uses: google-github-actions/get-gke-credentials@1.4.0
+      # Get the GKE credentials so we can deploy to the cluster
+      - uses: google-github-actions/get-gke-credentials@v1.7.0
         with:
-          project_id: ${{ secrets.GKE_PROJECT }}
           cluster_name: ${{ env.GKE_CLUSTER }}
           location: ${{ env.GKE_ZONE }}
-          service_account_key: ${{ secrets.GKE_SA_KEY }}
+          credentials: ${{ secrets.GKE_SA_KEY }}
 
-      - name: Deploy to GKE
+      # Deploy the Docker image to the GKE cluster
+      - name: Deploy
         run: |-
           kubectl apply -f gke.yaml
           kubectl get services -o wide
