--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,9 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  GKE_CLUSTER: dev-cluster # Add your cluster name here.
-  GKE_ZONE: us-central1-c # Add your cluster zone here.
+  GKE_CLUSTER: dev-cluster    # Add your cluster name here.
+  GKE_ZONE: us-central1-c   # Add your cluster zone here.
+  
 
 jobs:
   setup-build-publish-deploy:
@@ -42,25 +43,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # Setup gcloud CLI
-      - uses: google-github-actions/setup-gcloud@v0.2.0
+      - name: Setup gcloud CLI
+        uses: google-github-actions/setup-gcloud@v0.2.1
         with:
           service_account_key: ${{ secrets.GKE_SA_KEY }}
           project_id: ${{ secrets.GKE_PROJECT }}
 
-      # Configure Docker to use the gcloud command-line tool as a credential
-      # helper for authentication
-      - run: |-
+      - name: Configure Docker to use the gcloud command-line tool as a credential helper for authentication
+        run: |-
           gcloud --quiet auth configure-docker
 
-      # Get the GKE credentials so we can deploy to the cluster
-      - uses: google-github-actions/get-gke-credentials@v1.7.0
+      - name: Get the GKE credentials so we can deploy to the cluster
+        uses: google-github-actions/get-gke-credentials@v1.7.0
         with:
           cluster_name: ${{ env.GKE_CLUSTER }}
           location: ${{ env.GKE_ZONE }}
           credentials: ${{ secrets.GKE_SA_KEY }}
 
-      # Deploy the Docker image to the GKE cluster
       - name: Deploy
         run: |-
           kubectl apply -f gke.yaml
