--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
     - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
       with:
         service_account_key: ${{ secrets.GKE_SA_KEY }}
-        project_id: "gcp-dev-account"
+        project_id: gcp-dev-account
 
     # Configure Docker to use the gcloud command-line tool as a credential
     # helper for authentication
