--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,10 +44,11 @@ jobs:
       uses: actions/checkout@v3
 
     # Setup gcloud CLI
-    - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
+    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
+        version: "270.0.0"
+        service_account_email: ${{ secrets.GKE_EMAIL }}
         service_account_key: ${{ secrets.GKE_SA_KEY }}
-        project_id: "gcp-dev-account"
 
     # Configure Docker to use the gcloud command-line tool as a credential
     # helper for authentication
