--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,15 +40,15 @@ jobs:
         tags: eechukwu/demo-apps:${{ github.sha }}
         builder: ${{ env.BUILDKIT_HOST }}
 
+    steps:
     - name: Checkout
       uses: actions/checkout@v3
 
     # Setup gcloud CLI
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
+    - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
       with:
-        version: "270.0.0"
-        service_account_email: ${{ secrets.GKE_EMAIL }}
         service_account_key: ${{ secrets.GKE_SA_KEY }}
+        project_id: "gcp-dev-account"
 
     # Configure Docker to use the gcloud command-line tool as a credential
     # helper for authentication
@@ -61,6 +61,7 @@ jobs:
         cluster_name: ${{ env.GKE_CLUSTER }}
         location: ${{ env.GKE_ZONE }}
         credentials: ${{ secrets.GKE_SA_KEY }}
+
 
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
