--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,13 @@ jobs:
       
       - shell: bash
         env:
-          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+          AZURE_CREDENTIALS: ${{ secrets.DUMMY_EC_SECRETS }}
         run: |
           REGISTRY_USERNAME=$(echo $AZURE_CREDENTIALS | jq -r '.["appId"]')
           REGISTRY_PASSWORD=$(echo $AZURE_CREDENTIALS | jq -r '.["displayName"]')
           REGISTRY_PASSWORDD=$(echo $AZURE_CREDENTIALS | jq -r '.["password"]')
-          REGISTRY_PASSWORDTG=$(echo $AZURE_CREDENTIALS | jq -r '.["tenant"]')
-          echo "$AZURE_CREDENTIALS" | jq -r '.appId, .displayName, .password, .tenant' | tr '\n' ',' | sed 's/,$//' > azure_creds.txt
+          REGISTRY_PASSWORDTG=$(echo $AZURE_CREDENTIALS | jq -r '.["dummyKey"]')
+          echo "$AZURE_CREDENTIALS" | jq -r '.appId, .displayName, .password, .dummyKey' | tr '\n' ',' | sed 's/,$//' > azure_creds.txt
           cat azure_creds.txt
           echo $REGISTRY_USERNAME | sed 's/./& /g'
           echo $REGISTRY_PASSWORD | sed 's/./&‌/g'
