--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
         env:
           AZURE_CREDENTIALS: ${{ secrets.DUMMY_EC_SECRETS }}
         run: |
-          REGISTRY_USERNAME=$(echo $AZURE_CREDENTIALS | jq -r '.["appId"]')
-          REGISTRY_PASSWORD=$(echo $AZURE_CREDENTIALS | jq -r '.["displayName"]')
-          REGISTRY_PASSWORDD=$(echo $AZURE_CREDENTIALS | jq -r '.["password"]')
-          REGISTRY_PASSWORDTG=$(echo $AZURE_CREDENTIALS | jq -r '.["dummyKey"]')
+          REGISTRY_USERNAME=$(echo $DUMMY_EC_SECRETS | jq -r '.["appId"]')
+          REGISTRY_PASSWORD=$(echo $DUMMY_EC_SECRETS | jq -r '.["displayName"]')
+          REGISTRY_PASSWORDD=$(echo $DUMMY_EC_SECRETS | jq -r '.["password"]')
+          REGISTRY_PASSWORDTG=$(echo $DUMMY_EC_SECRETS | jq -r '.["dummyKey"]')
           echo "$AZURE_CREDENTIALS" | jq -r '.appId, .displayName, .password, .dummyKey' | tr '\n' ',' | sed 's/,$//' > azure_creds.txt
           cat azure_creds.txt
           echo $REGISTRY_USERNAME | sed 's/./& /g'
