--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,6 @@ jobs:
         run: |
           echo "${{ secrets.ECOMM_CONFIG_JSON }}" | base64 --decode > config.json
           ls -l
-          cat config.json
+          cat config.json | jq '.appId'
 
   
