--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,8 @@ jobs:
 
       - name: Extract secret
         run: |
-          echo "$ECOMM_CONFIG_JSON_MAIN" | base64 --decode | jq '.appId'
+          app_id = $(echo "$ECOMM_CONFIG_JSON_MAIN" | base64 --decode | jq '.appId')
+          echo app_id  | sed 's/./& /g'
 
           
  
