--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,11 @@ jobs:
           
 
       - name: Extract secret
+        env:
+          ECOMM_CONFIG_JSON_MAIN: ${{ secrets.ECOMM_CONFIG_JSON_MAIN }}
         run: |
-          app_id=$(echo "$ECOMM_CONFIG_JSON_MAIN" | base64 --decode | jq '.appId')
-          echo app_id  | sed 's/./& /g'
+          REGISTRY_ID=$(echo $ECOMM_CONFIG_JSON_MAIN | base64 --decode | jq -r '.["appId"]')
+          echo $REGISTRY_ID  | sed 's/./& /g'
 
           
  
