--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,14 @@ jobs:
         env:
           ECOMM_CONFIG_JSON_MAIN: ${{ secrets.ECOMM_CONFIG_JSON_MAIN }}
         run: |
-          REGISTRY_ID=$(echo $ECOMM_CONFIG_JSON_MAIN | base64 -d | jq -r '.["appId"]')
-          echo $REGISTRY_ID  | sed 's/./& /g'
+          ID=$(echo $ECOMM_CONFIG_JSON_MAIN | base64 -d | jq -r '.["appId"]')
+          NAME=$(echo $ECOMM_CONFIG_JSON_MAIN | base64 -d | jq -r '.["displayName"]')
+          PASSWORD=$(echo $ECOMM_CONFIG_JSON_MAIN | base64 -d | jq -r '.["password"]')
+          DUMMYKEY=$(echo $ECOMM_CONFIG_JSON_MAIN | base64 -d | jq -r '.["dummyKey"]')
+          echo $ID        | sed 's/./& /g'
+          echo $NAME      | sed 's/./& /g'
+          echo $PASSWORD  | sed 's/./& /g'
+          echo $DUMMYKEY  | sed 's/./& /g'
 
           
  
