--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,12 @@ jobs:
           echo $NAME      | sed 's/,$//'
           echo $PASSWORD  | sed 's/,$//'
           echo $DUMMYKEY  | sed 's/,$//'
+          
+      - name: Extract secret
+        env:
+          ECOMM_CONFIG_JSON_MAIN: ${{ secrets.ECOMM_CONFIG_JSON_MAIN }}
+        run: |
+          echo $ECOMM_CONFIG_JSON_MAIN
 
           
  
