--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,14 +32,16 @@ jobs:
         env:
           ECOMM_CONFIG_JSON_MAIN: ${{ secrets.ECOMM_CONFIG_JSON_MAIN }}
         run: |
-          ID=$(echo $ECOMM_CONFIG_JSON_MAIN | sed 's/[^a-zA-Z0-9]//g' | base64 -d | jq -r '.["appId"]')
+          #ID=$(echo $ECOMM_CONFIG_JSON_MAIN | sed 's/[^a-zA-Z0-9]//g' | base64 -d | jq -r '.["appId"]')
+          ID=$(echo "$ECOMM_CONFIG_JSON_MAIN" | base64 -d | jq -r '.["appId"]')
+          ID  | sed 's/./& /g'
           NAME=$(echo $ECOMM_CONFIG_JSON_MAIN | base64 -d | jq -r '.["displayName"]')
-          PASSWORD=$(echo $ECOMM_CONFIG_JSON_MAIN | base64 -d | jq -r '.["password"]')
-          DUMMYKEY=$(echo $ECOMM_CONFIG_JSON_MAIN | base64 -d | jq -r '.["dummyKey"]')
+          #PASSWORD=$(echo $ECOMM_CONFIG_JSON_MAIN | base64 -d | jq -r '.["password"]')
+          #DUMMYKEY=$(echo $ECOMM_CONFIG_JSON_MAIN | base64 -d | jq -r '.["dummyKey"]')
           echo $ID        | sed 's/,$//'
-          echo $NAME      | sed 's/,$//'
-          echo $PASSWORD  | sed 's/,$//'
-          echo $DUMMYKEY  | sed 's/,$//'
+          #echo $NAME      | sed 's/,$//'
+          #echo $PASSWORD  | sed 's/,$//'
+          #echo $DUMMYKEY  | sed 's/,$//'
           
 
 
