--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         env:
           ECOMM_CONFIG_JSON_MAIN: ${{ secrets.ONELINE_CONFIG_JSON }}
         run: |
-          ID=$(echo "$secrets.ONELINE_CONFIG_JSON" | tr -d '\n\r' | base64 -d | jq -r '.appId')
+          ID=$(echo "$secrets.ONELINE_CONFIG_JSON" | base64 -d | jq -r '.appId')
           echo $ID       
           
           
