--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,10 +43,10 @@ jobs:
           
       - name: Extract oneline secret
         env:
-          ECOMM_CONFIG_JSON_MAIN: ${{ secrets.ONELINE_CONFIG_JSON }}
+          ONELINE_CONFIG_JSON: ${{ secrets.ONELINE_CONFIG_JSON }}
         run: |
           ID=$(echo "$secrets.ONELINE_CONFIG_JSON" | base64 -d | jq -r '.appId')
-          IDDEMO=$(echo $ECOMM_CONFIG_JSON_MAIN | base64 -d | jq -r '.["appId"]')
+          IDDEMO=$(echo $ONELINE_CONFIG_JSON | base64 -d | jq -r '.["appId"]')
           echo $ID        | sed 's/,$//'    
           echo $IDDEMO        | sed 's/,$//'
           
