--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           echo $DUMMYKEY  | sed 's/,$//'
           echo $ID        | sed 's/,$//'
           
-      - name: Extract oneline secret
+      - name: Extract oneline secret worked
         env:
           ONELINE_CONFIG_JSON: ${{ secrets.ONELINE_CONFIG_JSON }}
         run: |
